release: publish ViperConnect v4.0.20
