# src/services/contacts/contact_directory_types.ts
@@ -11,6 +11,7 @@ export type ContactDirectoryItem = {
   push_name?: string
   username?: string
   picture?: string
+  picture_id?: string
   last_updated_ms: number
 }
 
